--- a/quarkus-app/pom.xml
+++ b/quarkus-app/pom.xml
@@ -60,6 +60,10 @@
       <artifactId>quarkus-kubernetes-service-binding</artifactId>
     </dependency> 
     -->
+        <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
+    </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-openshift</artifactId>
