--- a/springboot-app/pom.xml
+++ b/springboot-app/pom.xml
@@ -40,7 +40,11 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-
+    <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-registry-prometheus</artifactId>
+        <scope>runtime</scope>
+    </dependency>
         <!-- Enable Json Logging output
         Json logging will be enabled by default in 'production' profile.
         To start springboot with json logging pass 'spring_profiles_active=production,json-logging' 
